Updated players.js to send roomcode, Lobby.html to recieve the list of players

--- a/templates/Join.html
+++ b/templates/Join.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h2>Join a Lobby!</h2>
-            <form action="{{url_for('Handle_Insertion')}}" method=post>
+            <form action="{{url_for('Handle_Clicks')}}" method=post>
                 <label for="username">Username:</label><br>
                 <input type="text" name="username"><br>
                 <label for="roomcode">Roomcode:</label><br>
