--- a/templates/Create.html
+++ b/templates/Create.html
@@ -6,7 +6,7 @@
     <body>
         <h2>create a lobby!</h2>
 
-        <form action="{{url_for('Handle_Insertion')}}" method=post>
+        <form action="{{url_for('Handle_Clicks')}}" method=post>
             <label for="hostname">Hostname:</label><br>
             <input type="text"  name="hostname"><br>     
             <input type=submit value="Create" name=insert />
