--- a/templates/Lobby.html
+++ b/templates/Lobby.html
@@ -5,7 +5,7 @@
         <script src="{{url_for('static', filename='players.js')}}"></script>
     </head>
     <body onload=sendRoomCode()>
-        <input type='hidden' id='roomcode' value={{code}} />
+        <input type='hidden' id='roomcode' name='roomcode' value='{{code}}' />
         <h1>Welcome to lobby: {{code}}!</h1>
         <hr>
         <h3>Players:</h3>
