Added roomsize field to Create.html, will be used to determine if a Lobby is full when joining. Altered database schema to reflect changes to Lobby table.

--- a/templates/Create.html
+++ b/templates/Create.html
@@ -8,7 +8,10 @@
 
         <form action="{{url_for('Handle_Clicks')}}" method=post>
             <label for="hostname">Hostname:</label><br>
-            <input type="text"  name="hostname"><br>     
+            <input type="text" name="hostname"><br> 
+            <label for="roomsize">roomsize:</label><br>
+            <input type="number" name="roomsize" min='2' max='10' required><br> 
+            
             <input type=submit value="Create" name=insert />
             <input type=submit value=Leave name=return />
         </form>
