implemented flash messages

--- a/templates/Join.html
+++ b/templates/Join.html
@@ -2,9 +2,12 @@
 <html>
     <head>
         <title>Join a Lobby!</title>
+        <script src="{{url_for('static', filename='flash_msg.js')}}"></script>
     </head>
-    <body>
+    <body onload="flash_msg()">
+        <input type='hidden' id='flash_msg' name='flash_msg' value='{{flash_msg}}' />
         <h2>Join a Lobby!</h2>
+    
             <form action="{{url_for('Handle_Clicks')}}" method=post>
                 <label for="username">Username:</label><br>
                 <input type="text" name="username"><br>
