fixed a variable naming error in Lobby.html. added 'ON DELETE CASCADE' to relations hosts and joins in order to remove data appropiately when leave_lobby is called

--- a/templates/Lobby.html
+++ b/templates/Lobby.html
@@ -22,7 +22,7 @@
             <input type='submit' value='End Game' name='end'>
         </form>
         <form action="{{url_for('Handle_Clicks')}}", method='post'>
-            <input type='hidden' id='playername' name='playername' value='{{pname}}'>
+            <input type='hidden' id='playername' name='playername' value='{{name}}'>
             <input type='submit' value='Leave Game' name='leave'>
         </form>
     </body>
